Updated preprocessing the Clinic input data

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,76 @@
     "    if Clinic_Data[6][i] == 'Female':\n",
     "        Clinic_Data[6][i] = 0\n",
     "    elif Clinic_Data[6][i] == 'Male':\n",
-    "        Clinic_Data[6][i] = 1\n"
+    "        Clinic_Data[6][i] = 1\n",
+    "\n",
+    "# Tobacco - -1 for 'No', 1 for 'Yes', 0 for unknown\n",
+    "for i in range(len(Clinic_Data[8])):\n",
+    "    if Clinic_Data[8][i] == 'Yes':\n",
+    "        Clinic_Data[8][i] = 1\n",
+    "    elif Clinic_Data[8][i] == 'No':\n",
+    "        Clinic_Data[8][i] = -1\n",
+    "    else:\n",
+    "        Clinic_Data[8][i] = 0\n",
+    "\n",
+    "# Alcohol Abuse\n",
+    "# We categorize alcohol abuse into several levels:\n",
+    "# 5 - Acute alcoholic intoxicational alcoholism\n",
+    "# 4 - Alcohol abuse\n",
+    "# 3 - Alcohol dependence\n",
+    "# 2 - Alcohol use\n",
+    "# 1 - Other and unspecified\n",
+    "for i in range(len(Clinic_Data[9])):\n",
+    "    if Clinic_Data[9][i] == 'Acutealcoholicintoxicationinalcoholism,continuous' or Clinic_Data[9][i] == 'Acutealcoholicintoxicationinalcoholism,unspecified':\n",
+    "        Clinic_Data[9][i] = 5\n",
+    "    elif Clinic_Data[9][i] == 'Alcoholabuse,uncomplicated' or Clinic_Data[9][i] == 'Alcoholabuse,inremission' or Clinic_Data[9][i] == 'Alcoholabusewithintoxication,unspecified' or Clinic_Data[9][i] == 'Alcoholabusewithotheralcohol-induceddisorder':\n",
+    "        Clinic_Data[9][i] = 4\n",
+    "    elif Clinic_Data[9][i] == 'Alcoholdependence,uncomplicated' or Clinic_Data[9][i] == 'Alcoholdependence,inremission' or Clinic_Data[9][i] == 'Alcoholdependencewithwithdrawal,unspecified' or Clinic_Data[9][i] == 'Alcoholdependencewithintoxication,unspecified' or Clinic_Data[9][i]=='Alcoholdependencewithwithdrawaldelirium':\n",
+    "        Clinic_Data[9][i] = 3\n",
+    "    elif Clinic_Data[9][i] == 'Alcoholuse,unspecifiedwithintoxication,uncomplicated' or Clinic_Data[9][i] == 'Alcoholuse,unspecifiedwithunspecifiedalcohol-induceddisorder' or Clinic_Data[9][i] == 'Alcoholuse,unspecifiedwithalcohol-inducedsleepdisorder':\n",
+    "        Clinic_Data[9][i] = 2\n",
+    "    elif Clinic_Data[9][i] == 'Otherandunspecifiedalcoholdependence,unspecifieddrinkingbehavior' or Clinic_Data[9][i] == 'Otherandunspecifiedalcoholdependence,continuousdrinkingbehavior' or Clinic_Data[9][i]=='Otherandunspecifiedalcoholdependence,inremission' or Clinic_Data[9][i]=='Otherandunspecifiedalcoholdependence,episodicdrinkingbehavior':\n",
+    "        Clinic_Data[9][i] = 1\n",
+    "    elif Clinic_Data[9][i] == '':\n",
+    "        Clinic_Data[9][i] = 0\n",
+    "\n",
+    "# FRS 10-year Risk\n",
+    "# TODO\n",
+    "# we consider <1 to be 0.005, >30 to be 0.4, if unknown then we give 0\n",
+    "for i in range(len(Clinic_Data[10])):\n",
+    "    if Clinic_Data[10][i] == '<1%':\n",
+    "        Clinic_Data[10][i] = 0.005\n",
+    "    elif Clinic_Data[10][i] == '>30%':\n",
+    "        Clinic_Data[10][i] = 0.4\n",
+    "    elif Clinic_Data[10][i] == 'X':\n",
+    "        Clinic_Data[10][i] = 0\n",
+    "    else:\n",
+    "        Clinic_Data[10][i] = float(Clinic_Data[10][i].strip('%'))/100\n",
+    "\n",
+    "# FRAX 10y Fx Prob (Orange-w/ DXA)\n",
+    "# FRAX 10y Hip Fx Prob (Orange-w/ DXA)\n",
+    "# convert '_' to 0 for both columns\n",
+    "for i in range(len(Clinic_Data[11])):\n",
+    "    if Clinic_Data[11][i] == '_':\n",
+    "        Clinic_Data[11][i] = 0\n",
+    "    else:\n",
+    "        Clinic_Data[11][i] = float(Clinic_Data[11][i])\n",
+    "    \n",
+    "for i in range(len(Clinic_Data[12])):\n",
+    "    if Clinic_Data[12][i] == '_':\n",
+    "        Clinic_Data[12][i] = 0\n",
+    "    else:\n",
+    "        Clinic_Data[12][i] = float(Clinic_Data[12][i])\n",
+    "\n",
+    "# Met Sx\n",
+    "# set -1 if 'N', set 1 if 'Y', set 0 if unknown\n",
+    "for i in range(len(Clinic_Data[13])):\n",
+    "    if Clinic_Data[13][i] == '':\n",
+    "        Clinic_Data[13][i] = 0\n",
+    "    elif Clinic_Data[13][i] == 'N':\n",
+    "        Clinic_Data[13][i] = -1\n",
+    "    elif Clinic_Data[13][i] == 'Y':\n",
+    "        Clinic_Data[13][i] = 1\n",
+    "\n"
    ]
   },
   {
