Updated CTdata processing

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     "# BMI - If BMI is unknown, we assign an average BMI value\n",
     "average_BMI = mean([float(l) for l in Clinic_Data[4] if l!=''])\n",
     "for i in range(len(Clinic_Data[4])):\n",
-    "    if Clinic_Data[4][i] == '':\n",
+    "    if Clinic_Data[4][i] == '' or Clinic_Data[4][i] == ' ':\n",
     "        Clinic_Data[4][i] = average_BMI\n",
     "\n",
     "# BMI >30 - 0 for N, 1 for Y\n",
@@ -139,7 +139,7 @@
     "        Clinic_Data[9][i] = 2\n",
     "    elif Clinic_Data[9][i] == 'Otherandunspecifiedalcoholdependence,unspecifieddrinkingbehavior' or Clinic_Data[9][i] == 'Otherandunspecifiedalcoholdependence,continuousdrinkingbehavior' or Clinic_Data[9][i]=='Otherandunspecifiedalcoholdependence,inremission' or Clinic_Data[9][i]=='Otherandunspecifiedalcoholdependence,episodicdrinkingbehavior':\n",
     "        Clinic_Data[9][i] = 1\n",
-    "    elif Clinic_Data[9][i] == '':\n",
+    "    elif Clinic_Data[9][i] == '' or Clinic_Data[9][i] == ' ':\n",
     "        Clinic_Data[9][i] = 0\n",
     "\n",
     "# FRS 10-year Risk\n",
@@ -173,13 +173,49 @@
     "# Met Sx\n",
     "# set -1 if 'N', set 1 if 'Y', set 0 if unknown\n",
     "for i in range(len(Clinic_Data[13])):\n",
-    "    if Clinic_Data[13][i] == '':\n",
+    "    if Clinic_Data[13][i] == '' or Clinic_Data[13][i] == ' ':\n",
     "        Clinic_Data[13][i] = 0\n",
     "    elif Clinic_Data[13][i] == 'N':\n",
     "        Clinic_Data[13][i] = -1\n",
     "    elif Clinic_Data[13][i] == 'Y':\n",
     "        Clinic_Data[13][i] = 1\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_average(list):\n",
+    "    sum = 0\n",
+    "    count = 0\n",
+    "    for i in range(len(list)):\n",
+    "        if list[i]!='' and list[i]!=' ':\n",
+    "            sum = sum + float(list[i])\n",
+    "            count = count + 1\n",
+    "    \n",
+    "    if count!= 0:\n",
+    "        return sum/count\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Preprocessing\n",
+    "# ======================= CT Data =====================================\n",
+    "# fill in unknowns with mean value of all known fields\n",
+    "for i in range(len(CT_Data)):\n",
+    "    average = compute_average(CT_Data[i])\n",
+    "    for j in range(len(CT_Data[i])):\n",
+    "        if CT_Data[i][j] == '' or CT_Data[i][j] == ' ':\n",
+    "            CT_Data[i][j] = average\n"
    ]
   },
   {
