--- a/showSTAT.ipynb
+++ b/showSTAT.ipynb
@@ -102,7 +102,7 @@
        "      <th>MuscleArea(cm2)</th>\n",
        "      <th>L3SMI(cm2/m2)</th>\n",
        "      <th>AoCaAgatston</th>\n",
-       "      <th>LiverHU(Median)</th>\n",
+       "      <th>LiverHU(M)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -243,15 +243,15 @@
        "75%      268.287229      1.155669    37.513563       185.740992   \n",
        "max      763.112121     26.340177    99.484949      1605.744327   \n",
        "\n",
-       "       L3SMI(cm2/m2)  AoCaAgatston  LiverHU(Median)  \n",
-       "count    9071.000000   9222.000000      9176.000000  \n",
-       "mean       52.845874    698.799375        55.357236  \n",
-       "std        12.532750   1747.953761        10.361115  \n",
-       "min         0.562102      0.000000       -21.000000  \n",
-       "25%        44.504159      0.000000        52.000000  \n",
-       "50%        51.853886     58.490500        58.000000  \n",
-       "75%        60.805983    492.835750        62.000000  \n",
-       "max       187.713528  36942.923000       105.000000  "
+       "       L3SMI(cm2/m2)  AoCaAgatston   LiverHU(M)  \n",
+       "count    9071.000000   9222.000000  9176.000000  \n",
+       "mean       52.845874    698.799375    55.357236  \n",
+       "std        12.532750   1747.953761    10.361115  \n",
+       "min         0.562102      0.000000   -21.000000  \n",
+       "25%        44.504159      0.000000    52.000000  \n",
+       "50%        51.853886     58.490500    58.000000  \n",
+       "75%        60.805983    492.835750    62.000000  \n",
+       "max       187.713528  36942.923000   105.000000  "
       ]
      },
      "execution_count": 1,
@@ -280,7 +280,7 @@
     "            liverHU = df.iloc[:,i].replace(\" \",None)\n",
     "            liverHU = liverHU.dropna()\n",
     "            liverHU = pd.to_numeric(liverHU)\n",
-    "            data.insert(data.shape[1],str(df.columns[i]).replace(\" \", \"\"),liverHU.describe())\n",
+    "            data.insert(data.shape[1],\"LiverHU(M)\",liverHU.describe())\n",
     "\n",
     "        else:\n",
     "            data.insert(data.shape[1],str(df.columns[i]).replace(\" \", \"\"),df.iloc[:,i].describe())\n",
