--- a/showSTAT.ipynb
+++ b/showSTAT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "0f30e8df",
    "metadata": {},
    "outputs": [
@@ -108,153 +108,153 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>9176.000000</td>\n",
-       "      <td>9091.000000</td>\n",
-       "      <td>9091.000000</td>\n",
-       "      <td>9091.000000</td>\n",
-       "      <td>9091.000000</td>\n",
-       "      <td>9090.000000</td>\n",
-       "      <td>9195.000000</td>\n",
-       "      <td>9195.000000</td>\n",
-       "      <td>9071.000000</td>\n",
-       "      <td>9222.000000</td>\n",
-       "      <td>9176.000000</td>\n",
+       "      <td>9176.00</td>\n",
+       "      <td>9091.00</td>\n",
+       "      <td>9091.00</td>\n",
+       "      <td>9091.00</td>\n",
+       "      <td>9091.00</td>\n",
+       "      <td>9090.00</td>\n",
+       "      <td>9195.00</td>\n",
+       "      <td>9195.00</td>\n",
+       "      <td>9071.00</td>\n",
+       "      <td>9222.00</td>\n",
+       "      <td>9176.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>171.167720</td>\n",
-       "      <td>377.708045</td>\n",
-       "      <td>672.207190</td>\n",
-       "      <td>172.991393</td>\n",
-       "      <td>208.044914</td>\n",
-       "      <td>0.907246</td>\n",
-       "      <td>28.913116</td>\n",
-       "      <td>154.362254</td>\n",
-       "      <td>52.845874</td>\n",
-       "      <td>698.799375</td>\n",
-       "      <td>55.357236</td>\n",
+       "      <td>171.17</td>\n",
+       "      <td>377.71</td>\n",
+       "      <td>672.21</td>\n",
+       "      <td>172.99</td>\n",
+       "      <td>208.04</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>28.91</td>\n",
+       "      <td>154.36</td>\n",
+       "      <td>52.85</td>\n",
+       "      <td>698.80</td>\n",
+       "      <td>55.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>42.250455</td>\n",
-       "      <td>188.051371</td>\n",
-       "      <td>220.512034</td>\n",
-       "      <td>120.586593</td>\n",
-       "      <td>105.212502</td>\n",
-       "      <td>0.710412</td>\n",
-       "      <td>12.109405</td>\n",
-       "      <td>45.938823</td>\n",
-       "      <td>12.532750</td>\n",
-       "      <td>1747.953761</td>\n",
-       "      <td>10.361115</td>\n",
+       "      <td>42.25</td>\n",
+       "      <td>188.05</td>\n",
+       "      <td>220.51</td>\n",
+       "      <td>120.59</td>\n",
+       "      <td>105.21</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>12.11</td>\n",
+       "      <td>45.94</td>\n",
+       "      <td>12.53</td>\n",
+       "      <td>1747.95</td>\n",
+       "      <td>10.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>-20.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>253.376871</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.130985</td>\n",
-       "      <td>-118.307532</td>\n",
-       "      <td>9.376304</td>\n",
-       "      <td>0.562102</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-21.000000</td>\n",
+       "      <td>-20.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>253.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>-118.31</td>\n",
+       "      <td>9.38</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-21.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>142.000000</td>\n",
-       "      <td>242.505009</td>\n",
-       "      <td>514.288386</td>\n",
-       "      <td>84.587216</td>\n",
-       "      <td>131.455115</td>\n",
-       "      <td>0.480806</td>\n",
-       "      <td>22.265564</td>\n",
-       "      <td>122.020057</td>\n",
-       "      <td>44.504159</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>52.000000</td>\n",
+       "      <td>142.00</td>\n",
+       "      <td>242.51</td>\n",
+       "      <td>514.29</td>\n",
+       "      <td>84.59</td>\n",
+       "      <td>131.46</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>22.27</td>\n",
+       "      <td>122.02</td>\n",
+       "      <td>44.50</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>52.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>168.000000</td>\n",
-       "      <td>355.743590</td>\n",
-       "      <td>641.161538</td>\n",
-       "      <td>148.569697</td>\n",
-       "      <td>189.943243</td>\n",
-       "      <td>0.722089</td>\n",
-       "      <td>30.661951</td>\n",
-       "      <td>147.474269</td>\n",
-       "      <td>51.853886</td>\n",
-       "      <td>58.490500</td>\n",
-       "      <td>58.000000</td>\n",
+       "      <td>168.00</td>\n",
+       "      <td>355.74</td>\n",
+       "      <td>641.16</td>\n",
+       "      <td>148.57</td>\n",
+       "      <td>189.94</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>30.66</td>\n",
+       "      <td>147.47</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>58.49</td>\n",
+       "      <td>58.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>197.000000</td>\n",
-       "      <td>484.162523</td>\n",
-       "      <td>787.605688</td>\n",
-       "      <td>229.832754</td>\n",
-       "      <td>268.287229</td>\n",
-       "      <td>1.155669</td>\n",
-       "      <td>37.513563</td>\n",
-       "      <td>185.740992</td>\n",
-       "      <td>60.805983</td>\n",
-       "      <td>492.835750</td>\n",
-       "      <td>62.000000</td>\n",
+       "      <td>197.00</td>\n",
+       "      <td>484.16</td>\n",
+       "      <td>787.61</td>\n",
+       "      <td>229.83</td>\n",
+       "      <td>268.29</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>37.51</td>\n",
+       "      <td>185.74</td>\n",
+       "      <td>60.81</td>\n",
+       "      <td>492.84</td>\n",
+       "      <td>62.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>378.000000</td>\n",
-       "      <td>1206.222222</td>\n",
-       "      <td>1859.699346</td>\n",
-       "      <td>1054.685714</td>\n",
-       "      <td>763.112121</td>\n",
-       "      <td>26.340177</td>\n",
-       "      <td>99.484949</td>\n",
-       "      <td>1605.744327</td>\n",
-       "      <td>187.713528</td>\n",
-       "      <td>36942.923000</td>\n",
-       "      <td>105.000000</td>\n",
+       "      <td>378.00</td>\n",
+       "      <td>1206.22</td>\n",
+       "      <td>1859.70</td>\n",
+       "      <td>1054.69</td>\n",
+       "      <td>763.11</td>\n",
+       "      <td>26.34</td>\n",
+       "      <td>99.48</td>\n",
+       "      <td>1605.74</td>\n",
+       "      <td>187.71</td>\n",
+       "      <td>36942.92</td>\n",
+       "      <td>105.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         L1_HU_BMD  TATArea(cm2)  TotalBodyAreaEA(cm2)  VATArea(cm2)  \\\n",
-       "count  9176.000000   9091.000000           9091.000000   9091.000000   \n",
-       "mean    171.167720    377.708045            672.207190    172.991393   \n",
-       "std      42.250455    188.051371            220.512034    120.586593   \n",
-       "min     -20.000000      0.000000            253.376871      0.000000   \n",
-       "25%     142.000000    242.505009            514.288386     84.587216   \n",
-       "50%     168.000000    355.743590            641.161538    148.569697   \n",
-       "75%     197.000000    484.162523            787.605688    229.832754   \n",
-       "max     378.000000   1206.222222           1859.699346   1054.685714   \n",
+       "       L1_HU_BMD  TATArea(cm2)  TotalBodyAreaEA(cm2)  VATArea(cm2)  \\\n",
+       "count    9176.00       9091.00               9091.00       9091.00   \n",
+       "mean      171.17        377.71                672.21        172.99   \n",
+       "std        42.25        188.05                220.51        120.59   \n",
+       "min       -20.00          0.00                253.38          0.00   \n",
+       "25%       142.00        242.51                514.29         84.59   \n",
+       "50%       168.00        355.74                641.16        148.57   \n",
+       "75%       197.00        484.16                787.61        229.83   \n",
+       "max       378.00       1206.22               1859.70       1054.69   \n",
        "\n",
-       "       SATArea(cm2)  VAT/SATRatio     MuscleHU  MuscleArea(cm2)  \\\n",
-       "count   9091.000000   9090.000000  9195.000000      9195.000000   \n",
-       "mean     208.044914      0.907246    28.913116       154.362254   \n",
-       "std      105.212502      0.710412    12.109405        45.938823   \n",
-       "min        0.000000      0.130985  -118.307532         9.376304   \n",
-       "25%      131.455115      0.480806    22.265564       122.020057   \n",
-       "50%      189.943243      0.722089    30.661951       147.474269   \n",
-       "75%      268.287229      1.155669    37.513563       185.740992   \n",
-       "max      763.112121     26.340177    99.484949      1605.744327   \n",
+       "       SATArea(cm2)  VAT/SATRatio  MuscleHU  MuscleArea(cm2)  L3SMI(cm2/m2)  \\\n",
+       "count       9091.00       9090.00   9195.00          9195.00        9071.00   \n",
+       "mean         208.04          0.91     28.91           154.36          52.85   \n",
+       "std          105.21          0.71     12.11            45.94          12.53   \n",
+       "min            0.00          0.13   -118.31             9.38           0.56   \n",
+       "25%          131.46          0.48     22.27           122.02          44.50   \n",
+       "50%          189.94          0.72     30.66           147.47          51.85   \n",
+       "75%          268.29          1.16     37.51           185.74          60.81   \n",
+       "max          763.11         26.34     99.48          1605.74         187.71   \n",
        "\n",
-       "       L3SMI(cm2/m2)  AoCaAgatston   LiverHU(M)  \n",
-       "count    9071.000000   9222.000000  9176.000000  \n",
-       "mean       52.845874    698.799375    55.357236  \n",
-       "std        12.532750   1747.953761    10.361115  \n",
-       "min         0.562102      0.000000   -21.000000  \n",
-       "25%        44.504159      0.000000    52.000000  \n",
-       "50%        51.853886     58.490500    58.000000  \n",
-       "75%        60.805983    492.835750    62.000000  \n",
-       "max       187.713528  36942.923000   105.000000  "
+       "       AoCaAgatston  LiverHU(M)  \n",
+       "count       9222.00     9176.00  \n",
+       "mean         698.80       55.36  \n",
+       "std         1747.95       10.36  \n",
+       "min            0.00      -21.00  \n",
+       "25%            0.00       52.00  \n",
+       "50%           58.49       58.00  \n",
+       "75%          492.84       62.00  \n",
+       "max        36942.92      105.00  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,9 +283,10 @@
     "            data.insert(data.shape[1],\"LiverHU(M)\",liverHU.describe())\n",
     "\n",
     "        else:\n",
-    "            data.insert(data.shape[1],str(df.columns[i]).replace(\" \", \"\"),df.iloc[:,i].describe())\n",
+    "            data.insert(data.shape[1],str(df.columns[i]).strip().replace(\" \", \"\"),df.iloc[:,i].describe())\n",
     "    return data\n",
-    "                   \n",
+    "\n",
+    "pd.options.display.float_format = \"{:.2f}\".format                   \n",
     "df = pd.read_excel(\"OppScrData.xlsx\")\n",
     "df.info()\n",
     "printClinicOutCome()\n",
