--- a/project_part3.ipynb
+++ b/project_part3.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b209ed57",
+   "metadata": {},
+   "source": [
+    "# models with gain impputated CT data and death day"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b13c3ab6",
    "metadata": {},
    "outputs": [
@@ -11,11 +19,11 @@
      "output_type": "stream",
      "text": [
       "rmse 405.9853379387751\n",
-      "rscore 0.629739753490305\n",
+      "r2score 0.629739753490305\n",
       "rmse 393.06552365136827\n",
-      "rscore 0.652930625672898\n",
-      "rmse 401.8867104579166\n",
-      "rscore 0.6371779460460438\n"
+      "r2score 0.652930625672898\n",
+      "rmse 406.0505217752716\n",
+      "r2score 0.6296208481080865\n"
      ]
     },
     {
@@ -40,7 +48,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.linear_model import Ridge\n",
     "import csv \n",
     "\n",
     "db = [] # retrive data\n",
@@ -65,7 +73,7 @@
     "rms = np.sqrt(mean_squared_error(y_test, y_predicted))\n",
     "rScore = r2_score(y_test, y_predicted)\n",
     "print(\"rmse\",rms)\n",
-    "print(\"rscore\",rScore)\n",
+    "print(\"r2score\",rScore)\n",
     "\n",
     "regr = RandomForestRegressor(max_depth=10, random_state=0)\n",
     "regr.fit(X_train_std, y_train)\n",
@@ -73,22 +81,89 @@
     "rms = np.sqrt(mean_squared_error(y_test, y_predicted))\n",
     "rScore = r2_score(y_test, y_predicted)\n",
     "print(\"rmse\",rms)\n",
-    "print(\"rscore\",rScore)\n",
+    "print(\"r2score\",rScore)\n",
     "\n",
     "\n",
-    "reg =  KNeighborsRegressor(n_neighbors=17)\n",
+    "reg =  Ridge(1)\n",
     "reg.fit(X_train_std, y_train)\n",
     "y_predicted = reg.predict(X_test_std)\n",
     "rms = np.sqrt(mean_squared_error(y_test, y_predicted))\n",
     "rScore = r2_score(y_test, y_predicted)\n",
     "print(\"rmse\",rms)\n",
-    "print(\"rscore\",rScore)"
+    "print(\"r2score\",rScore)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc54314",
+   "metadata": {},
+   "source": [
+    "# models with gain impputated CT data + clinic data and death day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6a426ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse 385.06331939163994\n",
+      "r2score 0.6669183651043809\n",
+      "rmse 364.11632087484185\n",
+      "r2score 0.6669183651043809\n",
+      "rmse 385.1225682086415\n",
+      "r2score 0.6668158561916657\n"
+     ]
+    }
+   ],
+   "source": [
+    "from helper760_part3 import read_inputs\n",
+    "# Let's read all data and preprocess them\n",
+    "Clininc_Data,Outcome_Data,CT_Data = read_inputs()\n",
+    "\n",
+    "Clininc = np.array(Clininc_Data)\n",
+    "Clininc = Clininc.T\n",
+    "Clininc = Clininc.astype(float)\n",
+    "CT_Clinic = np.hstack((CT,Clininc))\n",
+    "X_train, X_test, y_train, y_test = train_test_split(CT_Clinic, deathday, test_size=0.2, random_state=666)\n",
+    "standardScalar = StandardScaler() \n",
+    "standardScalar.fit(X_train)\n",
+    "X_train_std = standardScalar.transform(X_train)\n",
+    "X_test_std = standardScalar.transform(X_test)\n",
+    "\n",
+    "reg = LinearRegression().fit(X_train_std, y_train)\n",
+    "y_predicted = reg.predict(X_test_std)\n",
+    "rms = np.sqrt(mean_squared_error(y_test, y_predicted))\n",
+    "rScore = r2_score(y_test, y_predicted)\n",
+    "print(\"rmse\",rms)\n",
+    "print(\"r2score\",rScore)\n",
+    "\n",
+    "regr = RandomForestRegressor(max_depth=10, random_state=0)\n",
+    "regr.fit(X_train_std, y_train)\n",
+    "y_predicted = regr.predict(X_test_std)\n",
+    "rms = np.sqrt(mean_squared_error(y_test, y_predicted))\n",
+    "r2Score = r2_score(y_test, y_predicted)\n",
+    "print(\"rmse\",rms)\n",
+    "print(\"r2score\",rScore)\n",
+    "\n",
+    "\n",
+    "reg = Ridge(1)\n",
+    "reg.fit(X_train_std, y_train)\n",
+    "y_predicted = reg.predict(X_test_std)\n",
+    "rms = np.sqrt(mean_squared_error(y_test, y_predicted))\n",
+    "rScore = r2_score(y_test, y_predicted)\n",
+    "print(\"rmse\",rms)\n",
+    "print(\"r2score\",rScore)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a426ea8",
+   "id": "d8a31f39",
    "metadata": {},
    "outputs": [],
    "source": []
