Gain is useless, wasted a lot of time. Back up and use samples with known death days as training sets

--- a/project_part1_disease_cancer.ipynb
+++ b/project_part1_disease_cancer.ipynb
@@ -34,28 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Clininc_Data,Outcome_Data,CT_Data = read_inputs()\n",
-    "def kFoldCV(k, X, y, model):\n",
-    "    len_x = X.shape[0]\n",
-    "    ind_step = int(len_x  / k)\n",
-    "    ind = np.array([i * ind_step for i in range(k)])\n",
-    "    accuracy = np.zeros(k)\n",
-    "    precision = np.zeros(k)\n",
-    "    recall = np.zeros(k)\n",
-    "    # first k - 1 fold\n",
-    "    for i in range(k - 1):\n",
-    "        X_train_k = np.vstack((X[:ind[i],:],X[ind[i+1]:,:]))\n",
-    "        X_test_k = X[ind[i]:ind[i + 1]]\n",
-    "        y_train_k = np.hstack((y[:ind[i]],y[ind[i+1]:]))\n",
-    "        y_test_k = y[ind[i]:ind[i + 1]]\n",
-    "        _, accuracy[i],precision[i],recall[i] = model.evaluate(X_test_k, y_test_k)       \n",
-    "    # last fold\n",
-    "    X_train_k = X[:ind[k - 1],:]\n",
-    "    y_train_k = y[:ind[k - 1]]\n",
-    "    X_test_k = X[ind[k - 1]:,:]\n",
-    "    y_test_k = y[ind[k - 1]:]\n",
-    "    _, accuracy[k - 1],precision[k - 1],recall[k - 1] = model.evaluate(X_test_k, y_test_k)\n",
-    "    return accuracy,precision,recall"
+    "Clininc_Data,Outcome_Data,CT_Data = read_inputs()"
    ]
   },
   {
